[package]
name = "ch_03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
difflib = "0.4.0"
memchr = "2.6.4"
shellexpand = "3.1.0"
strsim = "0.10.0"
unicode-normalization = "0.1.22"
unicode-segmentation = "1.10.1"
